Fix hover on mobile links

--- a/assets/scss/layout/_nav-mobile.scss
+++ b/assets/scss/layout/_nav-mobile.scss
@@ -38,6 +38,10 @@
       font-family: $secondary-font;
       color: #fff;
       text-decoration: none;
+
+      &:hover {
+        color: #fff;
+      }
     }
   }
 
